# cmake-external

./: CMakeLists.txt  Makefile  README.md  cmake-external.cmake
src/: CMakeLists.txt  test_main.cc
